Refactors architecture into modules

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,14 @@ name = "flappy"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+name = "flappy"
+path = "src/lib.rs"
+
+[[bin]]
+name = "flappy"
+path = "src/main.rs"
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
